# solana-randomness-service-example

./: .eslintignore  .eslintrc.json  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml
crates/solana-randomness-service-lite/: Cargo.toml  README.md
crates/solana-randomness-service-lite/src/: lib.rs  types.rs
programs/solana-randomness-consumer/: Cargo.toml
programs/solana-randomness-consumer/src/: lib.rs
tests/: solana-randomness-consumer.ts
